@@ -72,7 +72,7 @@ enum FeatureFlag: Int, CaseIterable, OverrideableFlag {
         case .siteIconCreator:
             return BuildConfiguration.current != .appStore
         case .weeklyRoundup:
-            return true
+            return !NotificationFilteringService().shouldFilterWordPressNotifications()
         case .weeklyRoundupStaticNotification:
             // This may be removed, but we're feature flagging it for now until we know for sure we won't need it.
             return false
